--- a/styles/_forms.scss
+++ b/styles/_forms.scss
@@ -11,95 +11,13 @@ strong {
   font-weight: $font-weight-semi-bold;
 }
 
+label {
+  margin-bottom: 0.125rem;
+}
+
 .application {
   display: block;
   margin: 3.125rem auto;
-}
-
-.checkbox-fields {
-  .form-check {
-    display: inline-flex;
-    align-items: center;
-    flex-wrap: nowrap;
-    margin-bottom: 1.25rem;
-    padding-right: 2.125rem;
-    padding-left: 0;
-
-    label {
-      position: relative;
-      display: inline-flex;
-      align-items: center;
-      margin: 0;
-      cursor: pointer;
-      font-weight: 400;
-
-      span {
-        line-height: 1;
-      }
-
-      span:first-child {
-        margin-right: .5rem;
-      }
-
-      input,
-      svg {
-        width: $checkbox-size;
-        height: $checkbox-size;
-      }
-
-      input {
-        position: relative;
-        margin: 0;
-        padding: 0;
-        cursor: pointer;
-        transition: box-shadow 0.3s;
-        border: none;
-        border-radius: $input-border-radius;
-        outline: none;
-        background: $white;
-        box-shadow: inset 0 0 0 $input-border-width $gray-200;
-        appearance: none;
-
-        &:hover {
-          box-shadow: inset 0 0 0 $input-border-width darken($gray-200, 5%);
-        }
-
-        &:checked {
-          transition-delay: 0.4s;
-          box-shadow: inset 0 0 0 $input-border-width $primary;
-
-          &+svg {
-            stroke-dasharray: 16.1 86.12;
-            stroke-dashoffset: 102.22;
-          }
-        }
-      }
-
-      svg {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: $checkbox-size;
-        height: $checkbox-size;
-        transition: stroke-dasharray 0.6s, stroke-dashoffset 0.6s;
-        transform: scale(1) translateZ(0);
-        pointer-events: none;
-        fill: none;
-        stroke-width: 2px;
-        stroke-linecap: round;
-        stroke-linejoin: round;
-        stroke: $primary;
-        stroke-dasharray: 86.12;
-        stroke-dashoffset: 86.12;
-      }
-    }
-  }
-}
-
-.dropdown-fields {
-  .form-group {
-    margin-bottom: 1.25rem;
-  }
 }
 
 .form-control {
